Fix strange size 3 text asset layout issue

--- a/styles/main.less
+++ b/styles/main.less
@@ -138,6 +138,13 @@
 // }
 
 // Assets
+.lt-ie9 .columnizer-col {
+  position: relative;
+  margin-left: 0;
+  padding-left: 20px;
+  &:first-child { padding-left: 0; }
+}
+
 .asset-title {
   .headline-text();
   p { .headline-text(); }
